// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders and behaves correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    busy={false}
    disabled={false}
    onPress={[Function]}
    textStyle={Object {}}
    title="Foo"
    viewStyle={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0)",
              "borderRadius": 2,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {},
            false,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "white",
                "fontSize": 16,
              },
              Object {},
            ]
          }
        >
          Foo
        </Text>
      </View>,
      "disabled": false,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          false,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ]
            }
          >
            Foo
          </Text>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0,0,0,0)",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          Object {},
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Foo",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "white",
                "fontSize": 16,
              },
              Object {},
            ],
          },
          "ref": null,
          "rendered": "Foo",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0)",
                "borderRadius": 2,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              Object {},
              false,
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ]
            }
          >
            Foo
          </Text>
        </View>,
        "disabled": false,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            false,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {},
                ]
              }
            >
              Foo
            </Text>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0)",
              "borderRadius": 2,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {},
            false,
          ],
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Foo",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ],
            },
            "ref": null,
            "rendered": "Foo",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders and behaves correctly 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    busy={true}
    disabled={false}
    onPress={[Function]}
    textStyle={Object {}}
    title="Foo"
    viewStyle={Object {}}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "activeOpacity": 0.2,
      "children": <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0)",
              "borderRadius": 2,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {},
            false,
          ]
        }
      >
        <ActivityIndicator
          animating={true}
          color="#999999"
          hidesWhenStopped={true}
          size="small"
          style={
            Object {
              "marginRight": 4,
            }
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "white",
                "fontSize": 16,
              },
              Object {},
            ]
          }
        >
          Foo
        </Text>
      </View>,
      "disabled": false,
      "onPress": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
            style={
              Object {
                "marginRight": 4,
              }
            }
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ]
            }
          >
            Foo
          </Text>,
        ],
        "style": Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(0,0,0,0)",
            "borderRadius": 2,
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 20,
            "paddingVertical": 10,
          },
          Object {},
          false,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "animating": true,
            "color": "#999999",
            "hidesWhenStopped": true,
            "size": "small",
            "style": Object {
              "marginRight": 4,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": "Foo",
            "ellipsizeMode": "tail",
            "style": Array [
              Object {
                "backgroundColor": "rgba(0,0,0,0)",
                "color": "white",
                "fontSize": 16,
              },
              Object {},
            ],
          },
          "ref": null,
          "rendered": "Foo",
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "activeOpacity": 0.2,
        "children": <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "backgroundColor": "rgba(0,0,0,0)",
                "borderRadius": 2,
                "flexDirection": "row",
                "justifyContent": "center",
                "paddingHorizontal": 20,
                "paddingVertical": 10,
              },
              Object {},
              false,
            ]
          }
        >
          <ActivityIndicator
            animating={true}
            color="#999999"
            hidesWhenStopped={true}
            size="small"
            style={
              Object {
                "marginRight": 4,
              }
            }
          />
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ]
            }
          >
            Foo
          </Text>
        </View>,
        "disabled": false,
        "onPress": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <ActivityIndicator
              animating={true}
              color="#999999"
              hidesWhenStopped={true}
              size="small"
              style={
                Object {
                  "marginRight": 4,
                }
              }
            />,
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "backgroundColor": "rgba(0,0,0,0)",
                    "color": "white",
                    "fontSize": 16,
                  },
                  Object {},
                ]
              }
            >
              Foo
            </Text>,
          ],
          "style": Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "rgba(0,0,0,0)",
              "borderRadius": 2,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {},
            false,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "animating": true,
              "color": "#999999",
              "hidesWhenStopped": true,
              "size": "small",
              "style": Object {
                "marginRight": 4,
              },
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "Foo",
              "ellipsizeMode": "tail",
              "style": Array [
                Object {
                  "backgroundColor": "rgba(0,0,0,0)",
                  "color": "white",
                  "fontSize": 16,
                },
                Object {},
              ],
            },
            "ref": null,
            "rendered": "Foo",
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
